--- a/index.html
+++ b/index.html
@@ -3,50 +3,73 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header>
-		<h1>Jane
-		Foster</h1>
-		<nav>
-			<ul>
-				<li>About</li>
-				<li>Works</li>
-				<li>contact</li>
-			</ul>
-		</nav>
-		<h2>HELLO, I'M JANE FOSTER</h2>
-		<p>I am a photographer and art director based in Paris currently having a great time working at personal portfolio. 
-		I also freelance for many companies on my spare time and help them create joyful digital experiences.</p>	
-		<button>contact me</button>
-		<button>view works</button>
+	<header class="header">
+		<div class="menu-container">
+			<h1 class="title">Jane Foster</h1>
+			<nav>
+				<ul class="links">
+					<li>About</li>
+					<li>Works</li>
+					<li>contact</li>
+				</ul>
+			</nav>
+		</div>
+		<div class="header-container">
+			<h2 class="subtitle">HELLO, I'M JANE FOSTER</h2>
+			<p class="about">I am a photographer and art director based in Paris currently having a great time working at personal portfolio. 
+			I also freelance for many companies on my spare time and help them create joyful digital experiences.</p>	
+			<button class="button">contact me</button>
+			<button class="button">view works</button>
+		</div>
 	</header>
 	<main>
-		<section>
-			<img src="foto/About.jpg" alt="foto" width="250">
-			<span>JANE FOSTER, photographer</span>
-			<h2>About Me</h2>
-			<p>I am a photographer and art director based in Paris currently having a great time working at personal portfolio. I also freelance for many companies on my spare time and help them create joyful digital experiences and unique visual identities.</p>
-			<p>Wanna hire me for working on your company for full time or part time?</p>
-			<a href="#">Download my CV</a>
-			<h2>work experience</h2>	
-			<h3>Postent, event photographer assistant 
-			Paris, France</h3>
-			<span>2012-2013</span>
-			<h3>Photof, art director
-			Florence, Italy</h3>
-			<span>2013-2017</span>
-			<h3>Freelance photographer
-			Self-employed</h3>
-			<span>2017-2019</span>
+
+		<section class="сontainer-section1">
+			<div>
+				<img src="./foto/About.jpg" 
+				srcset="foto/layer-4@2x.jpg" class="portfolio-image">
+				<br/>
+				<span class="subtitle">JANE FOSTER,<span class="subtitle-small"> photographer</span></span>
+			</div>
+			<div>
+				<div class="about-Me-container">
+					<div>
+						<h2 class="subtitle">About Me</h2>
+						<p>I am a photographer and art director based in Paris currently having a great time working at personal portfolio. I also freelance for many companies on my spare time and help them create joyful digital experiences and unique visual identities.</p>
+					</div>
+					<div>
+						<p>Wanna hire me for working on your company for full time or part time?</p>
+						<a href="#">Download my CV</a>
+					</div>
+					<div>
+						<h2>work experience</h2>	
+						<h3>Postent, event photographer assistant 
+						Paris, France</h3>
+						<span>2012-2013</span>
+						<h3>Photof, art director
+						Florence, Italy</h3>
+						<span>2013-2017</span>
+					</div>
+					<div>
+						<h3>Freelance photographer
+						Self-employed</h3>
+						<span>2017-2019</span>
+					</div>
+				</div>
+			</div>
 		</section>
+
 		<section>
-			<h2>my latest works</h2>
+			<h2 class="subtitle">my latest works</h2>
 			<span>Projects i’ve been working on.</span>
 			<ul>
 				<li><img src="foto/water.jpg" alt="water" width="366"></li>
 				<li><img src="foto/city.jpg" alt="city" width="366"></li>
 				<li><img src="foto/girl.jpg" alt="girl" width="366"></li>
+			</ul>
 		</section>
 		<section>
 			<div>Drop me a line to hire me for freelance projects.</div>
