--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
+		<link rel="stylesheet" href="normalize.css">
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
@@ -11,9 +12,9 @@
 				<h1 class="title">Jane Foster</h1>
 				<nav>
 					<ul class="links">
-						<li>About</li>
-						<li>Works</li>
-						<li>contact</li>
+						<li class="lin-about">About</li>
+						<li class="lin-works">Works</li>
+						<li class="lin-contact">contact</li>
 					</ul>
 				</nav>
 			</div>
@@ -88,3 +89,4 @@
 			</main>
 		</body>
 		</html>
+		
