--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 				<h1 class="title">Jane Foster</h1>
 				<nav>
 					<ul class="links">
-						<li class="lin-about">About</li>
-						<li class="lin-works">Works</li>
-						<li class="lin-contact">contact</li>
+						<li>About</li>
+						<li>Works</li>
+						<li>contact</li>
 					</ul>
 				</nav>
 			</div>
@@ -28,49 +28,52 @@
 		</header>
 		<main>
 
-			<section class="сontainer-section1">
+			<section class="сontainer-about">
 				<div>
 					<img src="./foto/About.jpg" 
 					srcset="foto/layer-4@2x.jpg" class="portfolio-image">
 					<br/>
 					<span class="subtitle">JANE FOSTER,<span class="subtitle-small"> photographer</span></span>
 				</div>
-					<div class="about-Me-container">
-						<div class="column1">
+				<div class="about-Me-container">
+					<div class="about-me">
+						<div>
 							<h2 class="subtitle">About Me</h2>
 							<p class="about">I am a photographer and art director based in Paris currently having a great time working at personal portfolio. I also freelance for many companies on my spare time and help them create joyful digital experiences and unique visual identities.</p>
 						</div>
-						<div class="column1">
-							<p>Wanna hire me for working on your company for full time or part time?</p>
-							<a href="#">Download my CV</a>
+						<div>
+							<p class="hire-me">Wanna hire me for working on your company for full time or part time?</p>
+							<a href="#" class="download">Download my CV</a>
 						</div>
+					</div>
+					<div>
 						<h2 class="subtitle">work experience</h2>	
 						<div class="row">
 							<div class="column">
-								<h3>Postent, event photographer assistant 
-								Paris, France</h3>
-								<span>2012-2013</span>
-							</div>
+								<h3 class="work-title">Postent, event photographer assistant Paris, France</h3>
+								<span class="year">2012-2013</span>
+							</div>		
 							<div class="column">
-								<h3>Photof, art director
-								Florence, Italy</h3>
-								<span>2013-2017</span>
-							</div>
-							<div class="column">
-								<h3>Freelance photographer
-								Self-employed</h3>
-								<span>2017-2019</span>
+								<h3 class="work-title">Photof, art director Florence, Italy</h3>
+								<span class="year">2013-2017</span>
 							</div>
 						</div>
+						<div class="row">
+							<div class="column">
+						<h3 class="work-title">Freelance photographer Self-employed</h3>
+						<span class="year">2017-2019</span>
+						</div>
 					</div>
-				</section>
+					</div>
+				</div>
+			</section>
 
-				<section class="container-section2">
-					<div class="foto title">
+				<section class="container-works">
+					<div class="foto">
 					<h2 class="subtitle">my latest works</h2>
-					<span>Projects i’ve been working on.</span>
+					<span class="foto-text">Projects i’ve been working on.</span>
 					</div>
-					<ul class="links2">
+					<ul class="links-foto">
 						<li><img src="foto/water.jpg" alt="water" width="366"></li>
 						<li><img src="foto/city.jpg" alt="city" width="366"></li>
 						<li><img src="foto/girl.jpg" alt="girl" width="366"></li>
